fix gaps

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header span {
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
     display: flex;
     flex-direction: column;
-    row-gap: 60px;
+    gap: 60px;
 }
 
 select {
@@ -116,7 +116,7 @@ select:hover,
     /* 📍 Свойства flexbox для отступов между элементами в списках */
     display: flex;
     flex-direction: column;
-    row-gap: 16px;
+    gap: 16px;
 }
 
 .frameworks-list {
@@ -137,7 +137,7 @@ select:hover,
     min-width: 50%;
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
+    gap: 20px;
 }
 
 .books-list {
